@@ -36,6 +36,7 @@ public class Prop_LangTranslator extends Property implements Language
 {
 	public String ID() { return "Prop_LangTranslator"; }
 	public String name(){return "Language Translator";}
+	public String writtenName(){return "Language Translator";}
 	public int abstractQuality(){return Ability.QUALITY_BENEFICIAL_SELF;}
 	protected int canAffectCode(){return CAN_MOBS|CAN_ITEMS|CAN_ROOMS;}
     protected DVector langs=new DVector(2);
