@@ -2228,4 +2228,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 3. New Commands (From 4.x snippets): Experience, Wealth (thx again Robert)
 4. RawMaterial can now be customized with ADDMATERIAL_ in coffeemud.ini file.
 5. Wearable can now be customized with ADDWEARLOC_ in coffeemud.ini file.
-6. Only Artisan's learn the Master common skills now.
+6. Only Artisan's learn the Master common skills now.  Other classes have their common skill levels lowered.
+7. New language: Sign Language
+8.  
